<resources>
    <string name="app_name">Harusem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide_2_string">No one to talk with?\n chat with a bot</string>
    <string name="notification">Notification</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="please_wait">Please wait…</string>
    <string name="dlg_error">Error</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_loading">Loading…</string>
    <string name="dlg_choose_image_from">Select photo from…</string>
    <string name="dlg_retry">Retry</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="chat_info_add_people_error">Add people errors</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="chat_wait">Wait for all attachments to upload</string>
    <string name="subtitle_text_logged_in_as">Outgoing Call</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without space, the first char must be a letter</string>
    <string name="field_name_chat_room_name">Chat room name</string>
    <string name="field_name_user_name">User name</string>
    <string name="pref_manage_speakerphone_by_proximity_key">manage_speakerphone_by_proximity_preference</string>
    <string name="pref_manage_speakerphone_by_proximity_title">Manage Speaker Phone by Proximity Sensor</string>
    <string name="pref_manage_speakerphone_by_proximity_dlg">Manage Speaker Phone by Proximity Sensor</string>
    <string name="pref_manage_speakerphone_by_proximity_summary">Enables managing of Speaker Phone by Proximity Sensor for Audio calls</string>
    <string name="pref_manage_speakerphone_by_proximity_default">false</string>
    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_title">Answer Time Interval (15&#8211;90s)</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_title">Disconnect Time Interval (10&#8211;90s)</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
    <string name="pref_dialing_time_interval_title">Dialing Time Interval (3&#8211;10s)</string>
    <string name="pref_dialing_time_interval_default_value">5</string>
    <string name="pref_audiocodec_title">Default audio</string>
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>
    <string name="pref_default_value">Default</string>
    <string name="pref_default_camera_key">default_camera_preference</string>
    <string name="pref_default_camera_title">Default Camera</string>
    <string name="pref_default_camera_dlg">Select default camera</string>
    <string name="pref_default_camera_default">0</string>
    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_startbitrate_key">startbitrate_preference</string>
    <string name="pref_startbitrate_title">Start bitrate setting</string>
    <string name="pref_startbitrate_dlg">Start bitrate setting</string>
    <string name="pref_startbitrate_default">Default</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_dlg">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Built-in AEC is not available</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec</string>
    <string name="pref_videocodec_dlg">Select default video codec</string>
    <string name="pref_videocodec_default">0</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">https://apprtc.appspot.com</string>
    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Display call statistics.</string>
    <string name="pref_displayhud_dlg">Display call statistics.</string>
    <string name="pref_displayhud_default" translatable="false">false</string>
    <string name="pref_audiocodec_key">pref_audio_code codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="pref_version">QuickBlox WebRTC\nBuild version 1.12</string>
    <string name="btn_screen_capture">screenShot</string>
    <string name="accepted">Accepted</string>
    <string name="connection_was_lost">Connection was lost</string>
    <string name="opponents">and %s other</string>
    <string name="opponent">and %s </string>
    <string name="ringing">Ringing</string>
    <string name="stop_share">Stop</string>
    <string name="camera_swicth_failed">\"Failed switch camera\"</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_chat_info">Edit Group</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_select_people_done">Done</string>
    <string name="error_leave_chat">Error leaving room</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="photo_chat_attachment">Photo</string>
    <string name="audio_chat_attachment">Audio Attachment</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="create_chat">Creating chat…</string>
    <string name="placeholder_username_you">%s (you)</string>
    <string name="select_users_get_users_error">Error while retrieving users</string>
    <string name="select_users_edit_chat">Add Users to chat</string>
    <string name="select_users_create_chat">Create new chat</string>
    <string name="select_users_choose_users">Please select at least 1 user</string>
    <string name="dlg_restoring_chat_session">Logging in…</string>
    <string name="error_recreate_session">Login Chat error</string>
    <string name="sender_id">640804138209</string>
    <string name="auth_full_name_field_not_entered">Please enter Full Name</string>
    <string name="auth_full_name_field_is_too_short">Full Name is too short (minimum is 3 characters)</string>
    <string name="auth_full_name_field_is_too_long">Full Name is too long (maximum is 200 characters)</string>
    <string name="profile_full_name_not_entered">Please enter Full Name</string>
    <string name="dlg_open_app_settings">Settings</string>
    <string name="dialog_hint_message">Message</string>
    <string name="dialog_no_chats">Oops…\nYou don\'t have any chats,\n tap \'Create\' button to create new group chat \nor go in private chat \nvia Friends Details page"</string>
    <string name="dialog_reply">Reply</string>
    <string name="dialog_user_is_not_friend">User is not your friend</string>
    <string name="dialog_confirm_sending_attach">Do you really want to send %1$s?</string>
    <string name="dialog_attach_image">attachment image</string>
    <string name="dialog_attach_audio">attachment audio</string>
    <string name="dialog_attach_video">attachment video</string>
    <string name="dialog_location">location</string>
    <string name="dialog_now_typing">Typing…</string>
    <string name="dialog_message_reject_friend">Do you really want to reject contact request from %1$s?</string>
    <string name="dialog_ctx_menu_reply">Reply</string>
    <string name="dialog_ctx_menu_prv_message">Private Message</string>
    <string name="dialog_ctx_menu_video_call">Video Call</string>
    <string name="dialog_ctx_menu_profile">View Profile</string>
    <string name="dialog_ctx_menu_remove">Leave and remove chat</string>
    <string name="dialog_ctx_menu_delete">Delete dialog</string>
    <string name="dialog_loading_dialogs">Updating dialogs list… Please wait</string>
    <string name="dialog_record_cancel">slide to cancel</string>
    <string name="dialog_record_canceled">Audio recording has been canceled</string>
    <string name="dialog_count_unread">99+</string>
    <string name="also_on_call">Also on call:</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="action_update_opponents_list">Update opponents list</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="user_full_name">Mahmoud ALMuhammed</string>
    <string name="english">English</string>
    <string name="tukish">Tukish</string>
    <string name="password_reset_string">We just need your registered email address to send you password reset</string>
    <string name="forget_password">Forget password?</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="reset_password">Reset Password</string>
    <string name="mother_language">Mother Language</string>
    <string name="learning_language">Learning Language</string>
    <string name="group_info">Group Info</string>
</resources>