<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_chat_action_group_edit"
        android:title="@string/menu_chat_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat_action_group_info"
        android:title="@string/group_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat_action_leave"
        android:title="@string/menu_leave_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat_action_delete"
        android:title="@string/menu_delete_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat_action_view_profile"
        android:title="View Profile"
        app:showAsAction="never" />


</menu>
