<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"

    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:id="@+id/reset_pass_layout"
    tools:context="com.example.william.harusem.ui.activities.ForgotPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:src="@drawable/layer_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:text="@string/forget_password"
        android:textColor="#ffffff"
        android:textSize="18.3sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16.3dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:singleLine="false"
        android:text="@string/password_reset_string"
        android:textColor="#ffffff"
        android:textSize="15.3sp"

        />

    <EditText
        android:id="@+id/reset_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="15dp"
        android:drawableTint="#e7eced"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:backgroundTint="#ffffff"

        />


    <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_button_border"
            android:text="@string/reset_password"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            />

</LinearLayout>
</ScrollView>