<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    tools:context="com.example.william.harusem.ui.activities.ProfileActivity">

    <View
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_activity_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="84dp"
        android:background="@color/white"
        android:orientation="vertical"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="0dp"
        card_view:contentPadding="0dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/top_user_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimary" />

            <RelativeLayout
                android:id="@+id/photo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/friend_detail_image_view"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/circle_shape" />

                <ProgressBar
                    android:id="@+id/profile_pb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/friend_name_friend_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/photo_layout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/user_full_name"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/friend_name_friend_detail"
                android:layout_marginTop="25dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="7dp">


                <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/mother_language"
                        android:textColor="@color/colorPrimary" />


                    <TextView
                        android:id="@+id/mother_language_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textColor="#000"
                        tools:text="@string/english" />

                    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                        android:id="@+id/mother_language_pb"
                        android:layout_width="80dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:rcBackgroundPadding="5dp"
                        />

                </LinearLayout>

                <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/learning_language"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/learning_language_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textColor="#000"
                        tools:text="@string/tukish" />

                    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                        android:id="@+id/learning_language_pb"
                        android:layout_width="80dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:rcBackgroundPadding="5dp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_friend_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_activity_tab_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        card_view:cardCornerRadius="3dp"
        card_view:contentPadding="7dp"

        >

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/flag"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_flag" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Country"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/country_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="Turkey"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <View
        android:id="@+id/to_be_hide_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:visibility="gone" />

    <ProgressBar
        android:id="@+id/profile_activity_loading_pb"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorSecondary"
        android:visibility="visible"

        />

</RelativeLayout>
